--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -122,6 +122,18 @@
         </item>
         <item>
          <widget class="QTableView" name="tableViewColors">
+          <property name="showDropIndicator" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="dragDropOverwriteMode">
+           <bool>false</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
           <attribute name="verticalHeaderDefaultSectionSize">
            <number>70</number>
           </attribute>
